tests/baselines/reference/for-of7.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of7.ts(1,1): error TS2304: Cannot find name 'v'.
tests/cases/conformance/es6/for-ofStatements/for-of7.ts(2,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of7.ts (2 errors) ====
    v;
    ~
!!! error TS2304: Cannot find name 'v'.
    for (let v of [0]) { }
                  ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.